--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         </div>
 
     </div>
+    <div class="modal-bg">
+        <div class="modal">
+
+            <input type="text" class="finput" placeholder="Modifier votre Todo">
+            <button class="savebtn">Save</button>
+            <span class="fermer"><img src="images/images.png" alt="closeBtn" srcset=""></span>
+        </div>
+    </div>
 
 
     <script src="server.js "></script>
