--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         <div class="modal">
 
             <input type="text" class="finput" placeholder="Modifier votre Todo">
-            <button class="savebtn">Save</button>
-            <span class="fermer"><img src="images/images.png" alt="closeBtn" srcset=""></span>
+            <button type="submit" class="savebtn">Save</button>
+            <span class="fermer "><img src="images/images.png " alt="closeBtn " srcset=" ">
+            </span>
         </div>
     </div>
 
